welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:19: error: not found: value get
  while (getX()!=6 && get(Y)!=0){
                      ^SnakeBuggle:19: error: not found: value Y
  while (getX()!=6 && get(Y)!=0){
                          ^