welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  def pasDeSerpent(){
    while (!estFaceMur){
      avance()
    }
    getX()
    getY()
    if (getDirection()==Direction.EAST){
      gauche()
      avance()
      gauche()
    }else{
      droite()
      avance()
      droite()
    }
  }
  
  while (getX()!=6 && get(Y)!=0){
    pasDeSerpent()
  }
}